--- a/Dialogs/SetupInput.xaml
+++ b/Dialogs/SetupInput.xaml
@@ -1,40 +1,159 @@
-﻿<tec:SetupPageBase x:Class="YATE.Dialogs.SetupInput"
+﻿<ycsp:SetupPageBase x:Class="YATE.Dialogs.SetupInput"
 						 xmlns:cc="clr-namespace:CustomControls;assembly=CustomControls"
-						 xmlns:tec="clr-namespace:YATECommon.SetupPage;assembly=YATECommon"
+						 xmlns:ycsp="clr-namespace:YATECommon.SetupPage;assembly=YATECommon"
+						 xmlns:ycd="clr-namespace:YATECommon.Drivers;assembly=YATECommon"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-	<Grid Margin="5">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="35"/>
-			<RowDefinition Height="30"/>
-			<RowDefinition Height="30"/>
-			<RowDefinition Height="35"/>
-			<RowDefinition Height="30"/>
-			<RowDefinition Height="30"/>
-			<RowDefinition Height="49*"/>
-		</Grid.RowDefinitions>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="110"/>
-			<ColumnDefinition Width="1*"/>
-		</Grid.ColumnDefinitions>
+             d:DesignHeight="620" d:DesignWidth="400">
+	<Grid Margin="5" Background="{DynamicResource Background}">
+		<StackPanel Orientation="Vertical">
+			<Grid>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="37"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+				</Grid.RowDefinitions>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="110"/>
+					<ColumnDefinition Width="1*"/>
+				</Grid.ColumnDefinitions>
 
-		<!-- Keybaord settings -->
-		<Grid Grid.Row="0" Grid.ColumnSpan="2">
-			<cc:Title Text="Keyboard Settings"/>
-		</Grid>
-		<TextBlock Grid.Row="1" Grid.Column="0" Text="Keyboard mapping:" VerticalAlignment="Center"/>
-		<ComboBox Grid.Row="1" Grid.Column="1" Margin="5,3,5,3" VerticalContentAlignment="Center" ItemsSource="{Binding KeyboardMappings}" SelectedValue="{Binding Settings.KeyboardMapping}" />
-		<CheckBox Grid.Row="2" Grid.Column="1" Margin="5,0,0,0" Content="Enable Ctrl-ESC Capture" IsChecked="{Binding Settings.CaptureCtrlESC}"/>
+				<!-- Keyboard settings -->
+				<cc:Title Grid.Row="0" Grid.ColumnSpan="2" Text="Keyboard Settings"/>
+				<TextBlock Grid.Row="1" Grid.Column="0" Text="Keyboard mapping:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="1" Grid.Column="1" Margin="5,3,5,3" VerticalContentAlignment="Center" ItemsSource="{Binding KeyboardMappings}" SelectedValue="{Binding Settings.KeyboardMapping}" />
+				<CheckBox Grid.Row="2" Grid.Column="1" Margin="5,0,0,0" Content="Enable Ctrl-ESC Capture" IsChecked="{Binding Settings.CaptureCtrlESC}"/>
+			</Grid>
 
-		<!-- Joystick settings -->
-		<Grid Grid.Row="3" Grid.ColumnSpan="2">
-			<cc:Title Text="Joystick Settings"/>
-		</Grid>
+			<!-- Joystick 1-->
+			<Grid>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="37"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+				</Grid.RowDefinitions>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="70"/>
+					<ColumnDefinition Width="90"/>
+					<ColumnDefinition Width="30"/>
+					<ColumnDefinition Width="1*"/>
+				</Grid.ColumnDefinitions>
 
+				<!-- Joystick 1 settings -->
+				<cc:Title Grid.Row="0" Grid.ColumnSpan="4" Text="Joystick 1 Settings"/>
+				
+				<!-- Controller -->
+				<TextBlock Grid.Row="1" Grid.Column="0" Text="Controller:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Margin="5,3,5,3" VerticalContentAlignment="Center" ItemsSource="{Binding InstalledJoysticks}" DisplayMemberPath="Description" SelectedValuePath="Description" SelectedValue="{Binding Settings.Joystick1.ControllerName}" />
+
+				<!-- Left -->
+				<TextBlock Grid.Row="2" Grid.Column="0" Text="Left:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="2" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick1.LeftChannel}" />
+				<cc:LedIndicator Grid.Row="2" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick1Left}" />
+				<Slider Grid.Row="2" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick1.LeftThreshold}"/>
+
+				<!-- Right -->
+				<TextBlock Grid.Row="3" Grid.Column="0" Text="Right:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="3" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick1.RightChannel}" />
+				<cc:LedIndicator Grid.Row="3" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick1Right}" />
+				<Slider Grid.Row="3" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick1.RightThreshold}" />
+
+				<!-- Up -->
+				<TextBlock Grid.Row="4" Grid.Column="0" Text="Up:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="4" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick1.UpChannel}" />
+				<cc:LedIndicator Grid.Row="4" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick1Up}" />
+				<Slider Grid.Row="4" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick1.UpThreshold}"/>
+
+				<!-- Down -->
+				<TextBlock Grid.Row="5" Grid.Column="0" Text="Down:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="5" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick1.DownChannel}" />
+				<cc:LedIndicator Grid.Row="5" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick1Down}" />
+				<Slider Grid.Row="5" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick1.DownThreshold}"/>
+
+				<!-- Fire -->
+				<TextBlock Grid.Row="6" Grid.Column="0" Text="Fire:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="6" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick1.FireChannel}" />
+				<cc:LedIndicator Grid.Row="6" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick1Fire}" />
+				<Slider Grid.Row="6" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick1.FireThreshold}"/>
+
+				<!-- Acceleration -->
+				<TextBlock Grid.Row="7" Grid.Column="0" Text="Acceleration:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="7" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick1.AccelerationChannel}" />
+				<cc:LedIndicator Grid.Row="7" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick1Acceleration}" />
+				<Slider Grid.Row="7" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick1.AccelerationThreshold}"/>
+			</Grid>
+
+			<!-- Joystick 2 -->
+			<Grid>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="37"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+					<RowDefinition Height="30"/>
+				</Grid.RowDefinitions>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="70"/>
+					<ColumnDefinition Width="90"/>
+					<ColumnDefinition Width="30"/>
+					<ColumnDefinition Width="1*"/>
+				</Grid.ColumnDefinitions>
+
+				<!-- Joystick 2 settings -->
+				<cc:Title Grid.Row="0" Grid.ColumnSpan="4" Text="Joystick 2 Settings"/>
+
+				<!-- Controller -->
+				<TextBlock Grid.Row="1" Grid.Column="0" Text="Controller:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Margin="5,3,5,3" VerticalContentAlignment="Center" ItemsSource="{Binding InstalledJoysticks}" DisplayMemberPath="Description" SelectedValuePath="Description" SelectedValue="{Binding Settings.Joystick2.ControllerName}" />
+
+				<!-- Left -->
+				<TextBlock Grid.Row="2" Grid.Column="0" Text="Left:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="2" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick2.LeftChannel}" />
+				<cc:LedIndicator Grid.Row="2" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick2Left}" />
+				<Slider Grid.Row="2" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick2.LeftThreshold}"/>
+
+				<!-- Right -->
+				<TextBlock Grid.Row="3" Grid.Column="0" Text="Right:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="3" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick2.RightChannel}" />
+				<cc:LedIndicator Grid.Row="3" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick2Right}" />
+				<Slider Grid.Row="3" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick2.RightThreshold}" />
+
+				<!-- Up -->
+				<TextBlock Grid.Row="4" Grid.Column="0" Text="Up:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="4" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick2.UpChannel}" />
+				<cc:LedIndicator Grid.Row="4" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick2Up}" />
+				<Slider Grid.Row="4" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick2.UpThreshold}"/>
+
+				<!-- Down -->
+				<TextBlock Grid.Row="5" Grid.Column="0" Text="Down:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="5" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick2.DownChannel}" />
+				<cc:LedIndicator Grid.Row="5" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick2Down}" />
+				<Slider Grid.Row="5" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick2.DownThreshold}"/>
+
+				<!-- Fire -->
+				<TextBlock Grid.Row="6" Grid.Column="0" Text="Fire:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="6" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick2.FireChannel}" />
+				<cc:LedIndicator Grid.Row="6" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick2Fire}" />
+				<Slider Grid.Row="6" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick2.FireThreshold}"/>
+
+				<!-- Acceleration -->
+				<TextBlock Grid.Row="7" Grid.Column="0" Text="Acceleration:" VerticalAlignment="Center"/>
+				<ComboBox Grid.Row="7" Grid.Column="1" Margin="5,3,5,3" Width="80" VerticalContentAlignment="Center" ItemsSource="{cc:EnumDescription ycd:JoystickChannel}" SelectedIndex="{Binding Settings.Joystick2.AccelerationChannel}" />
+				<cc:LedIndicator Grid.Row="7" Grid.Column="2" Width="16" Height="16" Value="{Binding Joystick2Acceleration}" />
+				<Slider Grid.Row="7" Grid.Column="3" Width="80" VerticalAlignment="Center" HorizontalAlignment="Left" Value="{Binding Settings.Joystick2.AccelerationThreshold}"/>
+			</Grid>
+		</StackPanel>
 	</Grid>
-</tec:SetupPageBase>
+</ycsp:SetupPageBase>
 
