--- a/Expansions/SAA1099/Forms/SetupAbout.xaml
+++ b/Expansions/SAA1099/Forms/SetupAbout.xaml
@@ -1,9 +1,9 @@
-﻿<sp:SetupPageBase x:Class="SAA1099.Forms.SetupAbout"
+﻿<sp:SetupPageBase x:Class="SAA1099Expansion.Forms.SetupAbout"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SAA1099.Forms"
+             xmlns:local="clr-namespace:SAA1099Expansion.Forms"
 						 xmlns:cc="clr-namespace:CustomControls;assembly=CustomControls"
 						 xmlns:sp="clr-namespace:YATECommon.SetupPage;assembly=YATECommon"
              mc:Ignorable="d" 
@@ -12,7 +12,7 @@
 		<ResourceDictionary Source="pack://application:,,,/DarkSkin;component/MetroDarkStyle.xaml" />
 	</UserControl.Resources>
 	<StackPanel Margin="5">
-			<TextBlock Text="32k RAM Expansion Cadrd (HBM)" />
-			<TextBlock Text="Copyright (c) 2020 Laszlo Arvai" />
+			<TextBlock Text="SAA1099 Internal Sound Chip Expansion" />
+			<TextBlock Text="Copyright (c) 2021 Laszlo Arvai" />
 		</StackPanel>
 </sp:SetupPageBase>
