--- a/Expansions/SoundQuartett/Forms/SetupInformation.xaml
+++ b/Expansions/SoundQuartett/Forms/SetupInformation.xaml
@@ -1,18 +1,14 @@
-﻿<sp:SetupPageBase x:Class="SAA1099Expansion.Forms.SetupAbout"
+﻿<sp:SetupPageBase x:Class="SoundQuartett.Forms.SetupInformation"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SAA1099Expansion.Forms"
+             xmlns:local="clr-namespace:SoundQuartett.Forms"
 						 xmlns:cc="clr-namespace:CustomControls;assembly=CustomControls"
 						 xmlns:sp="clr-namespace:YATECommon.SetupPage;assembly=YATECommon"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-	<UserControl.Resources>
-		<ResourceDictionary Source="pack://application:,,,/DarkSkin;component/MetroDarkStyle.xaml" />
-	</UserControl.Resources>
-	<StackPanel Margin="5">
-			<TextBlock Text="32k RAM Expansion Cadrd (HBM)" />
-			<TextBlock Text="Copyright (c) 2020 Laszlo Arvai" />
-		</StackPanel>
+    <Grid>
+            
+    </Grid>
 </sp:SetupPageBase>
