--- a/Expansions/MultiCart/Forms/SetupConfiguration.xaml
+++ b/Expansions/MultiCart/Forms/SetupConfiguration.xaml
@@ -17,7 +17,7 @@
 				<RowDefinition Height="35"/>
 				<RowDefinition Height="30"/>
 				<RowDefinition Height="30"/>
-				<RowDefinition Height="30"/>
+				<RowDefinition Height="35"/>
 				<RowDefinition Height="30"/>
 				<RowDefinition Height="30"/>
 				<RowDefinition Height="49*"/>
@@ -28,7 +28,7 @@
 			</Grid.ColumnDefinitions>
 
 			<!-- ROM settings -->
-			<cc:Title Grid.Row="0" Grid.ColumnSpan="2" Text="ROM Files"/>
+			<cc:Title Grid.Row="0" Grid.ColumnSpan="2" Text="ROM Settings"/>
 			<TextBlock Grid.Row="1" Grid.Column="0" Text="ROM1 File:" VerticalAlignment="Center"/>
 			<Grid Grid.Row="1" Grid.Column="1" >
 				<Grid.ColumnDefinitions>
@@ -47,6 +47,11 @@
 				<TextBox  Grid.Column="0" Text="{Binding Settings.ROM2FileName}" Margin="5,3,5,3" VerticalContentAlignment="Center"/>
 				<Button x:Name="bROM2Browse" Grid.Column="1" Margin="4,3,4,0" Content="..." Width="22" Height="24" VerticalAlignment="Top" Click="BROM2Browse_Click"/>
 			</Grid>
+
+			<!-- RAM Settings -->
+			<cc:Title Grid.Row="3" Grid.ColumnSpan="2" Text="RAM Settings"/>
+			<TextBlock Grid.Row="4" Grid.Column="0" Text="RAM Size:" VerticalAlignment="Center"/>
+			<ComboBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" x:Name="cbRAMSize"  Margin="5,3,5,3" VerticalContentAlignment="Center" ItemsSource="{Binding RAMSizeList}" SelectedIndex="{Binding Settings.RAMSize}" />
 		</Grid>
 	</Grid>
 </sp:SetupPageBase>
