MultiCart FLASH Write operation support has been added

--- a/Expansions/HBE/Forms/SetupConfiguration.xaml
+++ b/Expansions/HBE/Forms/SetupConfiguration.xaml
@@ -11,7 +11,7 @@
 	<UserControl.Resources>
 		<ResourceDictionary Source="pack://application:,,,/DarkSkin;component/MetroDarkStyle.xaml" />
 	</UserControl.Resources>
-	<Grid Margin="5">
+	<Grid Background="{DynamicResource Background}" Margin="5">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="35"/>
 			<RowDefinition Height="30"/>
