--- a/Dialogs/SetupGamebase.xaml
+++ b/Dialogs/SetupGamebase.xaml
@@ -7,7 +7,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-	<Grid Margin="5">
+	<Grid Background="{DynamicResource Background}" Margin="5">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="37"/>
 			<RowDefinition Height="30"/>
