--- a/Dialogs/SetupTVCConfiguration.xaml
+++ b/Dialogs/SetupTVCConfiguration.xaml
@@ -38,11 +38,11 @@
 		<ComboBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" x:Name="cbROMVersion"  Margin="5,3,5,3" VerticalContentAlignment="Center" ItemsSource="{Binding ROMVersionList}" SelectedIndex="{Binding Settings.ROMVersion}" />
 
 		<TextBlock Grid.Row="5" Grid.Column="0" Text="Custom Sys ROM:" VerticalAlignment="Center"/>
-		<TextBox Grid.Row="5" Grid.Column="1" Text="{Binding ROMPath}" Margin="5,3,5,3" VerticalContentAlignment="Center"/>
+		<TextBox Grid.Row="5" Grid.Column="1" Text="{Binding Settings.ROMPath}" Margin="5,3,5,3" VerticalContentAlignment="Center"/>
 		<Button Grid.Row="5" Grid.Column="2" Margin="3" Content="..." />
 
 		<TextBlock Grid.Row="6" Grid.Column="0" Text="Custom Ext ROM:" VerticalAlignment="Center"/>
-		<TextBox Grid.Row="6" Grid.Column="1" Text="{Binding ExtROMPath}" Margin="5,3,5,3" VerticalContentAlignment="Center"/>
+		<TextBox Grid.Row="6" Grid.Column="1" Text="{Binding Settings.ExtROMPath}" Margin="5,3,5,3" VerticalContentAlignment="Center"/>
 		<Button Grid.Row="6" Grid.Column="2" Margin="3" Content="..." />
 	</Grid>
 </tec:SetupPageBase>
