--- a/Expansions/HBS/Forms/SetupConfiguration.xaml
+++ b/Expansions/HBS/Forms/SetupConfiguration.xaml
@@ -11,7 +11,7 @@
 	<UserControl.Resources>
 		<ResourceDictionary Source="pack://application:,,,/DarkSkin;component/MetroDarkStyle.xaml" />
 	</UserControl.Resources>
-	<Grid>
+	<Grid Background="{DynamicResource Background}">
             
     </Grid>
 </sp:SetupPageBase>
