--- a/Expansions/SoundMagic/Forms/SetupInformation.xaml
+++ b/Expansions/SoundMagic/Forms/SetupInformation.xaml
@@ -8,7 +8,10 @@
 						 xmlns:sp="clr-namespace:YATECommon.SetupPage;assembly=YATECommon"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+	<UserControl.Resources>
+		<ResourceDictionary Source="pack://application:,,,/DarkSkin;component/MetroDarkStyle.xaml" />
+	</UserControl.Resources>
+	<Grid Background="{DynamicResource Background}">
             
     </Grid>
 </sp:SetupPageBase>
