--- a/Forms/DisassemblyListView.xaml
+++ b/Forms/DisassemblyListView.xaml
@@ -7,22 +7,40 @@
 			  xmlns:c="clr-namespace:CustomControls;assembly=CustomControls"
 				xmlns:yc="clr-namespace:YATE.Controls"
         mc:Ignorable="d"
+				x:Name="wDisassemblyList"
         Title="DisassemblyListView" Height="450" Width="800"
-				Style="{DynamicResource WindowStyle}" >
+				Style="{DynamicResource WindowStyle}" Closing="Window_Closing" >
+	<Window.InputBindings>
+		<KeyBinding Key="F5" Command="{Binding ExecutionControl.DebugRunCommand}" />
+		<KeyBinding Key="F5" Command="{Binding ExecutionControl.DebugPauseCommand}" Modifiers="Shift" />
+		<KeyBinding Key="F10" Command="{Binding ExecutionControl.DebugStepOverCommand}" />
+		<KeyBinding Key="F11" Command="{Binding ExecutionControl.DebugStepIntoCommand}" />
+		<KeyBinding Key="F12" Command="{Binding ExecutionControl.DebugStepOutCommand}" />
+	</Window.InputBindings>
 	<Grid Background="{DynamicResource Background}" >
 		<Grid.RowDefinitions>
-			<RowDefinition Height="30"/>
+			<RowDefinition Height="32"/>
 			<RowDefinition/>
 		</Grid.RowDefinitions>
-		<StackPanel Orientation="Horizontal" DataContext="{Binding ElementName=dlbMain}">
-			<TextBlock Margin="5" Text="Memory Start:" VerticalAlignment="Center"/>
-			<TextBox Margin="5" IsReadOnly="true" Text="0xFFFF" Width="45" VerticalAlignment="Center"/>
-			<TextBlock Text="End:" Margin="5" VerticalAlignment="Center"/>
-			<TextBox Margin="5" IsReadOnly="true" Text="0xFFFF" Width="45" VerticalAlignment="Center"/>
-			<Button Content="Change" VerticalAlignment="Center" Height="22"/>
-		</StackPanel>
 
-		<yc:DisassemblyListBox Grid.Row="1" x:Name="dlbMain" />
+		<Grid Grid.Row="0" Background="{DynamicResource BackgroundHighlighted}">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="48"/>
+				<ColumnDefinition MinWidth="550" />
+				<ColumnDefinition Width="95" />
+				<ColumnDefinition Width="150" />
+			</Grid.ColumnDefinitions>
+
+			<Border Grid.Column="1" Grid.ColumnSpan="3" BorderBrush="DarkGray" BorderThickness="0,0,0,1"/>
+			
+			<yc:TVCMemorySelector Grid.Column="0" Grid.ColumnSpan="2" x:Name="tmsMemorySelector" />
+
+			<TextBlock Grid.Column="2" Text="Selected Tcycles:" Margin="0,0,5,0" VerticalAlignment="Center" HorizontalAlignment="Right" />
+			<TextBlock Grid.Column="3" Text="{Binding TstateSumString}" DataContext="{Binding ElementName=wDisassemblyList}" Foreground="{DynamicResource ASMTstateColor}" VerticalAlignment="Center" Margin="0,0,5,0"/>
+
+		</Grid>
+
+		<yc:DisassemblyListBox Grid.Row="1" x:Name="dlbDisassembly" SelectionChanged="dlbDisassembly_SelectionChanged" />
 
 	</Grid>
 </Window>
