--- a/Forms/MainWindow.xaml
+++ b/Forms/MainWindow.xaml
@@ -86,14 +86,13 @@
 				<MenuItem Header="Step into" Command="{Binding ExecutionControl.DebugStepIntoCommand}" />
 				<MenuItem Header="Step over" Command="{Binding ExecutionControl.DebugStepOverCommand}" />
 				<MenuItem Header="Step out" Command="{Binding ExecutionControl.DebugStepOutCommand}" />
+				<Separator/>
+				<MenuItem Header="Clear All Breakpoints" Command="{Binding BreakpointControl.DeleteAllBreakpointsCommand}" />
 			</MenuItem>
 
 			<MenuItem Header="_View" x:Name="miView">
 				<MenuItem x:Name="miHexEdit" Header="New Hex Editor" Click="MiHexEditor_Click"  />
 				<MenuItem x:Name="miDisassemblyView" Header="New Disassembly View" Click="miDisassemblyView_Click"  />
-			</MenuItem>
-
-			<MenuItem Header="_Expansions" x:Name="miExpansions">
 			</MenuItem>
 
 			<MenuItem Header="_Tools">
@@ -225,7 +224,7 @@
 			</Button>		
 			
 			<!-- Step into -->
-			<Button Width="36" Height="36" Margin="2" ToolTip="Step Into" Command="{Binding ExecutionControl.DebugStepIntoCommand}">
+			<Button Width="36" Height="36" Margin="2" ToolTip="Step Into (F11)" Command="{Binding ExecutionControl.DebugStepIntoCommand}">
 				<Image Margin="2">
 					<Image.Source>
 						<DrawingImage>
@@ -249,7 +248,7 @@
 			</Button>
 
 			<!-- Step over -->
-			<Button Width="36" Height="36" Margin="2" ToolTip="Step Over">
+			<Button Width="36" Height="36" Margin="2" ToolTip="Step Over (F10)">
 				<Image Margin="2">
 					<Image.Source>
 						<DrawingImage>
@@ -275,7 +274,7 @@
 			</Button>
 
 			<!-- Step out button -->
-			<Button Width="36" Height="36" Margin="2" ToolTip="Step Out">
+			<Button Width="36" Height="36" Margin="2" ToolTip="Step Out (F12)">
 				<Image Margin="2">
 					<Image.Source>
 						<DrawingImage>
@@ -342,10 +341,6 @@
 
 			<TextBlock Style="{StaticResource MainTitleStyle}" Text="Memory Status"/>
 			<local:MemoryStatusPage x:Name="mspMemoryStatus" ExecutionControl="{Binding ExecutionControl}" />
-
-			<TextBlock Style="{StaticResource MainTitleStyle}" Text="Breakpoint"/>
-			<local:DebugPage x:Name="dpBreakpoint" ExecutionControl="{Binding ExecutionControl}" />
-			
 		</StackPanel>
 	
 		<StackPanel Grid.Column="2" Grid.Row="2" Margin="5,0,0,0">
